# podcast-processor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  podcast_processor.py  podcasts.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  on-demand.yml  process-podcasts.yml
mediaverwerker/: __init__.py  cli.py  config.py  daemon.py  nlp.py  pipeline.py  state.py  util.py
mediaverwerker/tasks/: article.py  clip.py  download.py  feeds.py  segment.py  transcribe.py
tests/: test_config.py  test_daemon.py  test_feeds.py  test_state.py  test_util.py
