[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mediaverwerker"
version = "0.1.0"
description = "CLI media processing tool"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "yt-dlp>=2024.0.0",
]

[tool.setuptools.packages.find]
include = ["mediaverwerker*"]

[project.scripts]
mediaverwerker = "mediaverwerker.cli:app"
