[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mediaverwerker"
version = "0.1.0"
description = "CLI media processing tool"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "yt-dlp>=2024.0.0",
    "curl-cffi>=0.14.0",
]

[tool.setuptools.packages.find]
include = ["mediaverwerker*"]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "pytest>=8.0.0"]

[project.scripts]
mediaverwerker = "mediaverwerker.cli:app"

[tool.ruff]
line-length = 120
exclude = ["podcast_processor.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"mediaverwerker/nlp.py" = ["E501"]
"mediaverwerker/tasks/article.py" = ["E501"]
"mediaverwerker/tasks/segment.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
